--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-markdown": "^4.3.1",
+    "react-query": "^2.19.0",
     "react-router": "^5.2.0",
     "react-scripts": "3.4.3"
   },
