--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-balance",
+  "name": "gitline",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,16 +7,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "moment": "^2.27.0",
+    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-markdown": "^4.3.1",
-    "react-query": "^2.19.0",
-    "react-router": "^5.2.0",
     "react-scripts": "3.4.3"
   },
+  "homepage": "https://tusharkashyap63.github.io/gitline",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
